@startuml

    namespace ua.khpi.oop.malokhvii04.shell.commands.debug {

        class NoDebugCommand {
            {static} -description: String
            {static} -keys: List<String>
            {static} -RESOURCE_BUNDLE_NAME: String
            {static} -resourceBundle: ResourceBundle
            +NoDebugCommand()
            {static} -updateResourceBundle(): void
            +execute(): void
            +getDescription(): String
            +getKeys(): List<String>
            +update(Observable, Object): void
        }

        class DebugCommand {
            {static} -description: String
            {static} -keys: List<String>
            {static} -RESOURCE_BUNDLE_NAME: String
            {static} -resourceBundle: ResourceBundle
            +DebugCommand()
            {static} -updateResourceBundle(): void
            +execute(): void
            +getDescription(): String
            +getKeys(): List<String>
            +update(Observable, Object): void
        }

        class CommandWithDebug {
            {static} -RESOURCE_BUNDLE_NAME: String
            {static} -resourceBundle: ResourceBundle
            -memoryAfterExecution: long
            -memoryBeforeExecution: long
            -timeAfterExecution: long
            -timeBeforeExecution: long
            +CommandWithDebug(Command)
            {static} -printClassInfo(Command, String): void
            {static} -printPackageInfo(Command, String): void
            +execute(): void
            -printExecutionTime(String): void
            -printMemoryUsage(String): void
        }

        abstract class ua.khpi.oop.malokhvii04.shell.commands.AbstractCommand
        ua.khpi.oop.malokhvii04.shell.commands.AbstractCommand <|-- NoDebugCommand

        ua.khpi.oop.malokhvii04.shell.commands.AbstractCommand <|-- DebugCommand

        abstract class ua.khpi.oop.malokhvii04.shell.commands.AbstractCommandDecorator
        ua.khpi.oop.malokhvii04.shell.commands.AbstractCommandDecorator <|-- CommandWithDebug

    }

@enduml
